--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next-cookies": "^2.0.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-star-ratings": "^2.3.0"
+    "react-star-ratings": "^2.3.0",
+    "react-toastify": "^10.0.4"
   },
   "devDependencies": {
     "@types/node": "^20",
