--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-toastify": "^10.0.4"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
